external-crates/move/crates/move-compiler/tests/move_2024/constants/cross_module_macro_private.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04001]: restricted visibility
   ┌─ tests/move_2024/constants/cross_module_macro_private.move:12:5
   │
 9 │ const SECRET: u64 = 42;
   │       ------ The constant '0x42::a::SECRET' is internal to its module. Declare it 'public(package)' to allow access from other modules in its package
   ·
12 │     SECRET
   │     ^^^^^^ Invalid access of '0x42::a::SECRET'
